Add JWT authentication, RBAC, registration endpoints, and changed  OpenAPI docs
